Add notes collection

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,10 @@
     <title>{{ page.title }} - {{ site.title }}</title>
     <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
   </head>
-  <body>
-    {{ content }}
+  <body class="bg-zinc-800 text-neutral-300">
+
+    <div class="container mx-auto">
+      {{ content }}
+    </div>
   </body>
 </html>
